--- a/Framework/GitHubAutomation/LdzTravelAutomation.csproj
+++ b/Framework/GitHubAutomation/LdzTravelAutomation.csproj
@@ -37,6 +37,9 @@
     <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -70,6 +73,7 @@
     <Compile Include="Pages\OrderTripPage.cs" />
     <Compile Include="Pages\QuestionPage.cs" />
     <Compile Include="Pages\TravelerInfoPage.cs" />
+    <Compile Include="Services\Logger.cs" />
     <Compile Include="Services\NormalTestInfoReader.cs" />
     <Compile Include="Services\PassengerInfoCreator.cs" />
     <Compile Include="Services\QuestionInfoCreator.cs" />
